{
    "name": "PlayerInputsActions",
    "maps": [
        {
            "name": "InGame",
            "id": "0c642ef9-bea5-4ee9-b5f9-f0f8db4cac17",
            "actions": [
                {
                    "name": "PlacePiece",
                    "type": "Button",
                    "id": "7c06d5d7-1bb8-45fe-bba5-93710d867fc5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8568803-d72a-461f-97eb-67d2873c7660",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlacePiece",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}